[gd_scene format=3 uid="uid://c4acg3uptu08i"]

[ext_resource type="Script" uid="uid://1jsw301ecqdb" path="res://scenes/blackboard.gd" id="1_i3d2x"]

[node name="Blackboard" type="ColorRect" unique_id=1287240771]
clip_contents = true
offset_right = 100.0
offset_bottom = 100.0
color = Color(0.22468486, 0.40735555, 0.3653948, 1)
script = ExtResource("1_i3d2x")

[node name="Line2D_X" type="Line2D" parent="." unique_id=1275886582]
points = PackedVector2Array(4, 2, 50, 2)
width = 4.0
default_color = Color(1, 0, 0, 1)

[node name="Line2D_Y" type="Line2D" parent="." unique_id=1271910296]
points = PackedVector2Array(2, 4, 2, 50)
width = 4.0
default_color = Color(0, 1, 0, 1)

[node name="CoordsLabel" type="Label" parent="." unique_id=120862772]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 20
text = "0/0"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="." unique_id=2019895062]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/paragraph_spacing = -6
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
text = "name
info"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
